# iced_tool

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
resources/osx/iced_test.app/Contents/: Info.plist
resources/osx/iced_test.app/Contents/Resources/: logo.icns
src/: lib.rs  main.rs
src/styles/: mod.rs
src/util/: mod.rs  sql.rs  util.rs
src/views/: bandin_view.rs  bar.rs  foot.rs  listview.rs  login.rs  main_ui.rs  mod.rs  order_view.rs  query_view.rs  tip.rs
